[tool.poetry]
name = "mlops-toolbox"
version = "2021.06"
description = ""
authors = ["mdeboc"]

[tool.poetry.dependencies]
python = "^3.7.2"

# org/ 2020-07
jupyter = "1.0.0"
jupyter-contrib-nbextensions = "0.5.1"
markdown = "3.2.2"
matplotlib = "3.2.2"
numpy = "^1.19"
pandas = "^1.2"
scikit-learn = "^0.23"
seaborn = "0.11.0"
setuptools-git = "1.2"
wheel = "0.34.2"
mlflow = "1.18.0"
cookiecutter = "^1.7.3"
dvc = "^2.4.3"

[tool.poetry.dev-dependencies]
jupyter = "1.0.0"
#jupyterlab = "2.1.5"
jupyter_contrib_nbextensions = "0.5.1"
#jupytext = "1.5.0"
black = "19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
